feat(public): nso-10703-api-doc
